FEATBL-1756 Fix: id_token local validation